--- a/resources/templates/partial/_footer.html
+++ b/resources/templates/partial/_footer.html
@@ -1,8 +1,11 @@
 {% load static %}
 
+
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/utils.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
+<script src="{% static 'js/ajax.js' %}"></script>
 
 <footer class="py-3 mt-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -14,4 +17,5 @@
     </ul>
     <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
 </footer>
+
 
