--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -8,7 +8,7 @@
 <main style="min-height: 100vh">
     {% include 'partial/_header.html' %}
 
-    <div class="container mt-5">
+    <div id="containerBase" class="container mt-5">
         {% block container %} {% endblock %}
     </div>
 
